# atrium

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
deploy/openshell/: README.md  docker-compose.yml  gateway.toml  init-jwt.sh
docs/design/: agent-versioning.md  interface-agent.md  observability.md  orchestration-workboard.md  plan-agent.md
scripts/: build-openshell.sh  build-prefect-runner.sh
src/atrium/: __init__.py
src/atrium/agents/: __init__.py  inference_agent.py  plan_agent_protocol.py  prompt_memory.py
src/atrium/agents/builder_agent/: __init__.py  agent.py
src/atrium/agents/builder_agent/sandbox/: Dockerfile  __init__.py  config.py  policy.yaml
src/atrium/agents/code_workspace_agent/: __init__.py  agent.py  python_agent.py
src/atrium/agents/code_workspace_agent/sandbox/: Dockerfile  __init__.py  config.py  policy.yaml
src/atrium/agents/code_workspace_agent/sandbox/python/: Dockerfile  __init__.py  config.py
src/atrium/agents/control_plane/: __init__.py  agent.py  protocol.py
src/atrium/agents/prefect_runner_agent/: __init__.py  agent.py
src/atrium/agents/prefect_runner_agent/sandbox/: Dockerfile  __init__.py  config.py  dispatch.py  policy.yaml
src/atrium/agents/tabby_llm_agent/: __init__.py  agent.py  cache.py  card.py  coding_agent.yaml
src/atrium/agents/tabby_llm_agent/bridge/: __init__.py  server.py
src/atrium/agents/tabby_llm_agent/sandbox/: Dockerfile  __init__.py  config.py  policy.yaml  requirements.txt
src/atrium/agents/task_agent/: __init__.py  agent.py  slack.py
src/atrium/core/: __init__.py  base_agent.py  errors.py  factory.py  morpher.py  registry.py  telemetry.py  types.py
src/atrium/orchestration/: __init__.py  bootstrap.py  cancel.py  flow.py  job.py  kick.py  protocol.py  review.py  runner.py  scheduler.py  serve.py  types.py
src/atrium/protocol/: __init__.py  a2a_transport.py
src/atrium/sandbox/: __init__.py  openshell.py
tests/: test_base_agent.py  test_builder_agent.py  test_code_workspace_agent.py  test_control_plane.py  test_factory.py  test_job.py  test_morpher.py  test_openshell.py  test_openshell_secrets.py  test_orchestration.py  test_plan_agent_protocol.py  test_prefect_runner_agent.py  test_prompt_memory.py  test_prompt_wiring.py  test_protocol.py  test_registry.py  test_tabby_llm_agent.py  test_task_agent.py  test_telemetry.py
tests/integration/: README.md  __init__.py  conftest.py  test_openshell_smoke.py  test_tabby_smoke.py  test_trace_stitch.py
