[project]
name = "atrium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[telemetry]>=1.1.0",
    "cryptography>=42.0",
    "docker>=7.1.0",
    "openinference-semantic-conventions>=0.1.30",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "semver>=3.0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
