[project]
name = "atrium"
version = "0.1.0"
description = "A self-evolving, security-isolated multi-agent runtime: physically-isolated OpenShell sandboxes, one A2A protocol, distributed tracing, and a registry-as-ledger with attestation-gated generational swaps."
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[telemetry]>=1.1.0",
    "cryptography>=42.0",
    "docker>=7.1.0",
    "openinference-semantic-conventions>=0.1.30",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0",
    # Prefect is the job-execution entry point: every job runs as a workboard
    # (a task-dependency DAG) on Prefect, so it is a core dependency, not optional.
    "prefect>=3.0",
    # Drives docker-compose from Python to auto-start the dependency services
    # (Prefect server + Postgres + Phoenix) — see atrium.orchestration.bootstrap.
    "python-on-whales>=0.71",
    "semver>=3.0.4",
    # The OpenShell CLI — the sandbox runtime `atrium.sandbox` drives. Every agent
    # runs inside an OpenShell sandbox, so it is a core dependency (installed by
    # default). OpenShell publishes only manylinux_2_39 wheels (glibc >= 2.39), so
    # on older hosts it is built from source with maturin against the local glibc.
    # That build needs a Rust toolchain + the Z3 dev library (z3-sys): run
    # `scripts/build-openshell.sh`, which provisions both without root and sets the
    # build env before `uv sync`.
    "openshell",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
# Build OpenShell from source (maturin) instead of the glibc-2.39 PyPI wheels.
openshell = { git = "https://github.com/NVIDIA/OpenShell" }

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
